# src/permission-schemes/dto/update-permission-scheme.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreatePermissionSchemeDto } from './create-permission-scheme.dto';
+
+export class UpdatePermissionSchemeDto extends PartialType(CreatePermissionSchemeDto) {}
